--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>2.0.26.Final</version>
+        </dependency>
 
         <!-- Kotlin -->
         <dependency>
@@ -234,7 +239,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>automate.profit.autocoin.ApplicationKt</mainClass>
                                 </transformer>
                             </transformers>
