--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <kotlin.version>1.3.50</kotlin.version>
         <junit.version>5.5.2</junit.version>
+
+        <!-- v1.4.11 and v1.4.12 has bug which does not allow custom port for private repositories-->
+        <dockerfile.maven.plugin.version>1.4.13</dockerfile.maven.plugin.version>
     </properties>
 
     <dependencies>
@@ -127,6 +130,57 @@
 
     <profiles>
         <profile>
+            <id>local-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.danielflower.mavenplugins</groupId>
+                        <artifactId>multi-module-maven-release-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <configuration>
+                            <releaseGoals>
+                                <releaseGoal>install</releaseGoal>
+                            </releaseGoals>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>pl.project13.maven</groupId>
+                        <artifactId>git-commit-id-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <configuration>
+                            <skipPoms>false</skipPoms>
+                            <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                            <gitDescribe>
+                                <tags>true</tags>
+                                <abbrev>7</abbrev>
+                                <forceLongFormat>false</forceLongFormat>
+                            </gitDescribe>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>${dockerfile.maven.plugin.version}</version>
+                        <configuration>
+                            <repository>localhost:5000/${project.artifactId}</repository>
+                            <tag>${git.commit.id.describe}</tag>
+                            <buildArgs>
+                                <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                            </buildArgs>
+                            <verbose>true</verbose>
+                        </configuration>
+                        <dependencies> <!-- required for JDK 9+ -->
+                            <dependency>
+                                <groupId>javax.activation</groupId>
+                                <artifactId>activation</artifactId>
+                                <version>1.1.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <build>
                 <plugins>
@@ -157,7 +211,7 @@
                     <plugin>
                         <groupId>com.spotify</groupId>
                         <artifactId>dockerfile-maven-plugin</artifactId>
-                        <version>1.4.12</version>
+                        <version>${dockerfile.maven.plugin.version}</version>
                         <configuration>
                             <repository>localhost:5000/${project.artifactId}</repository>
                             <tag>${git.commit.id.describe}</tag>
