--- a/scripts/env.properties.template
+++ b/scripts/env.properties.template
@@ -3,3 +3,5 @@ APP_PORT_ON_HOST="10021"
 SERVICE_NAME="autocoin-arbitrage-monitor"
 APP_DATA_PATH="${DATA_PATH}/${SERVICE_NAME}"
 LOG_PATH="${LOGS_PATH}/${SERVICE_NAME}"
+APP_OAUTH_CLIENT_ID="${APP_OAUTH_CLIENT_ID}"
+APP_OAUTH_CLIENT_SECRET="${APP_OAUTH_CLIENT_SECRET}"
