--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <version>${kotlin.version}</version>
         </dependency>
 
+        <!-- metrics -->
+        <dependency>
+            <groupId>com.datadoghq</groupId>
+            <artifactId>java-dogstatsd-client</artifactId>
+            <version>2.8.1</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
