Add DOCKER_PORT and HOST_PORT parameter to start.sh

--- a/scripts/env.properties.template
+++ b/scripts/env.properties.template
@@ -1,5 +1,6 @@
 VERSION=""
-APP_PORT_ON_HOST="10021"
+DOCKER_PORT="10021"
+HOST_PORT="10021"
 SERVICE_NAME="autocoin-arbitrage-monitor"
 APP_DATA_PATH="${DATA_PATH}/${SERVICE_NAME}"
 LOG_PATH="${LOGS_PATH}/${SERVICE_NAME}"
