--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,11 @@
         <kotlin.version>1.3.70</kotlin.version>
         <junit.version>5.6.0</junit.version>
         <jackson.version>2.10.3</jackson.version>
+        <autocoin-exchange-api-rest.version>1.0.56</autocoin-exchange-api-rest.version>
+        <autocoin-metrics-client.version>1.1.0</autocoin-metrics-client.version>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
         <maven.compiler.release>13</maven.compiler.release>
-
         <!-- v1.4.11 and v1.4.12 has bug which does not allow custom port for private repositories-->
         <dockerfile.maven.plugin.version>1.4.13</dockerfile.maven.plugin.version>
     </properties>
@@ -30,7 +31,7 @@
         <dependency>
             <groupId>automate.profit</groupId>
             <artifactId>autocoin-exchange-api-rest</artifactId>
-            <version>1.0.56</version>
+            <version>${autocoin-exchange-api-rest.version}</version>
         </dependency>
         <!-- Server -->
         <dependency>
@@ -85,7 +86,7 @@
         <dependency>
             <groupId>autocoin</groupId>
             <artifactId>autocoin-metrics-client</artifactId>
-            <version>1.0.1</version>
+            <version>${autocoin-metrics-client.version}</version>
         </dependency>
         <!-- Other -->
         <dependency>
@@ -110,12 +111,6 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.15.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit</artifactId>
-            <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
