--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <kotlin.version>1.3.70</kotlin.version>
         <junit.version>5.6.0</junit.version>
         <jackson.version>2.10.3</jackson.version>
-        <autocoin-exchange-api-rest.version>1.0.57</autocoin-exchange-api-rest.version>
+        <autocoin-exchange-api-rest.version>1.0.59</autocoin-exchange-api-rest.version>
         <autocoin-metrics-client.version>1.1.0</autocoin-metrics-client.version>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
@@ -92,6 +92,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp-sse -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-sse</artifactId>
             <version>4.4.1</version>
         </dependency>
         <!-- Tests -->
