--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <kotlin.version>1.3.70</kotlin.version>
         <junit.version>5.6.0</junit.version>
         <jackson.version>2.10.3</jackson.version>
+        <cxf.version>3.3.5</cxf.version>
         <autocoin-exchange-api-rest.version>1.0.59</autocoin-exchange-api-rest.version>
         <autocoin-metrics-client.version>1.1.0</autocoin-metrics-client.version>
         <maven.compiler.source>13</maven.compiler.source>
@@ -47,6 +48,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <!-- Kotlin -->
@@ -99,6 +105,16 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp-sse</artifactId>
             <version>4.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-client</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-sse</artifactId>
+            <version>${cxf.version}</version>
         </dependency>
         <!-- Tests -->
         <dependency>
