--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>13</java.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.version>1.5.31</kotlin.version>
-        <junit.version>5.6.0</junit.version>
-        <jackson.version>2.10.3</jackson.version>
+        <kotlin.version>1.6.0</kotlin.version>
+        <junit.version>5.8.2</junit.version>
+        <jackson.version>2.13.0</jackson.version>
         <autocoin-exchange-api-rest.version>1.0.74</autocoin-exchange-api-rest.version>
         <autocoin-metrics-client.version>1.1.0</autocoin-metrics-client.version>
         <maven.compiler.source>13</maven.compiler.source>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.0.30.Final</version>
+            <version>2.2.13.Final</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -63,23 +63,23 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.3.4</version>
+            <version>1.5.2</version>
         </dependency>
         <!-- logging -->
         <dependency>
             <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging</artifactId>
-            <version>1.7.8</version>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>2.1.15</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
+            <version>1.7.32</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.7</version>
             <scope>runtime</scope>
         </dependency>
         <!-- Metrics -->
@@ -92,12 +92,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.4.1</version>
+            <version>4.9.3</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp-sse</artifactId>
-            <version>4.4.1</version>
+            <version>4.9.3</version>
         </dependency>
         <!-- Tests -->
         <dependency>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.15.0</version>
+            <version>3.21.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.10.8</version>
+            <version>1.12.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
