--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
         <kotlin.version>1.6.0</kotlin.version>
         <junit.version>5.8.2</junit.version>
         <jackson.version>2.10.3</jackson.version>
-        <autocoin-exchange-api-rest.version>2.0.16</autocoin-exchange-api-rest.version>
-        <autocoin-metrics-client.version>1.1.0</autocoin-metrics-client.version>
+        <autocoin-exchange-api-rest.version>2.0.17</autocoin-exchange-api-rest.version>
+        <autocoin-metrics-client.version>1.1.2</autocoin-metrics-client.version>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
         <maven.compiler.release>13</maven.compiler.release>
@@ -68,8 +68,8 @@
         <!-- logging -->
         <dependency>
             <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging</artifactId>
-            <version>1.7.8</version>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>2.1.21</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
