--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>14</java.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.version>1.6.20-RC</kotlin.version>
+        <kotlin.version>1.6.21</kotlin.version>
         <junit.version>5.8.2</junit.version>
         <jackson.version>2.13.1</jackson.version>
         <autocoin-exchange-api-rest.version>2.0.21</autocoin-exchange-api-rest.version>
@@ -62,8 +62,8 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.6.0</version>
+            <artifactId>kotlinx-coroutines-core-jvm</artifactId>
+            <version>1.6.1</version>
         </dependency>
         <!-- logging -->
         <dependency>
