--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>14</java.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.version>1.6.21</kotlin.version>
+        <kotlin.version>1.7.0-RC</kotlin.version>
         <junit.version>5.8.2</junit.version>
         <jackson.version>2.13.1</jackson.version>
         <autocoin-exchange-api-rest.version>2.0.29</autocoin-exchange-api-rest.version>
@@ -136,11 +136,6 @@
             <artifactId>free-port-finder</artifactId>
             <version>1.1.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
