--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>14</java.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.version>1.7.0-RC</kotlin.version>
+        <kotlin.version>1.7.0</kotlin.version>
         <junit.version>5.8.2</junit.version>
         <jackson.version>2.13.3</jackson.version>
         <autocoin-exchange-api-rest.version>2.0.34</autocoin-exchange-api-rest.version>
@@ -63,13 +63,13 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core-jvm</artifactId>
-            <version>1.6.1</version>
+            <version>1.6.2</version>
         </dependency>
         <!-- logging -->
         <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
-            <version>2.1.21</version>
+            <version>2.1.23</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -92,12 +92,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.9.3</version>
+            <version>4.10.0</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp-sse</artifactId>
-            <version>4.9.3</version>
+            <version>4.10.0</version>
         </dependency>
         <!-- Tests -->
         <dependency>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.22.0</version>
+            <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.12.7</version>
+            <version>1.12.10</version>
             <scope>test</scope>
         </dependency>
         <dependency>
