--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.nhaarman.mockitokotlin2</groupId>
+            <groupId>org.mockito.kotlin</groupId>
             <artifactId>mockito-kotlin</artifactId>
-            <version>2.2.0</version>
+            <version>4.0.0</version>
             <scope>test</scope>
         </dependency>
         <!-- Without byte-buddy mockito is not able to mock kotlin final classes -->
