Make TELEGRAF_HOSTNAME env variable required to make config more verbose And treat "metrics.jsonl" value as trigger to use mock implementation

--- a/scripts/env.properties.template
+++ b/scripts/env.properties.template
@@ -6,3 +6,4 @@ APP_DATA_PATH="${DATA_PATH}/${SERVICE_NAME}"
 LOG_PATH="${LOGS_PATH}/${SERVICE_NAME}"
 APP_OAUTH_CLIENT_ID="${APP_OAUTH_CLIENT_ID}"
 APP_OAUTH_CLIENT_SECRET="${APP_OAUTH_CLIENT_SECRET}"
+TELEGRAF_HOSTNAME="telegraf"
