--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         <dockerfile.maven.plugin.version>1.4.13</dockerfile.maven.plugin.version>
     </properties>
 
+    <scm>
+        <connection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</connection>
+        <url>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</url>
+        <developerConnection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <!-- Autocoin -->
         <dependency>
@@ -146,111 +153,6 @@
 
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>local-release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.danielflower.mavenplugins</groupId>
-                        <artifactId>multi-module-maven-release-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <configuration>
-                            <releaseGoals>
-                                <releaseGoal>install</releaseGoal>
-                            </releaseGoals>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>pl.project13.maven</groupId>
-                        <artifactId>git-commit-id-plugin</artifactId>
-                        <version>3.0.1</version>
-                        <configuration>
-                            <skipPoms>false</skipPoms>
-                            <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-                            <gitDescribe>
-                                <tags>true</tags>
-                                <abbrev>7</abbrev>
-                                <forceLongFormat>false</forceLongFormat>
-                            </gitDescribe>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.spotify</groupId>
-                        <artifactId>dockerfile-maven-plugin</artifactId>
-                        <version>${dockerfile.maven.plugin.version}</version>
-                        <configuration>
-                            <repository>localhost:5000/${project.artifactId}</repository>
-                            <tag>${git.commit.id.describe}</tag>
-                            <buildArgs>
-                                <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-                            </buildArgs>
-                            <verbose>true</verbose>
-                        </configuration>
-                        <dependencies> <!-- required for JDK 9+ -->
-                            <dependency>
-                                <groupId>javax.activation</groupId>
-                                <artifactId>activation</artifactId>
-                                <version>1.1.1</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.danielflower.mavenplugins</groupId>
-                        <artifactId>multi-module-maven-release-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <configuration>
-                            <releaseGoals>
-                                <releaseGoal>install</releaseGoal>
-                            </releaseGoals>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>pl.project13.maven</groupId>
-                        <artifactId>git-commit-id-plugin</artifactId>
-                        <version>3.0.1</version>
-                        <configuration>
-                            <skipPoms>false</skipPoms>
-                            <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-                            <gitDescribe>
-                                <tags>true</tags>
-                                <abbrev>7</abbrev>
-                                <forceLongFormat>false</forceLongFormat>
-                            </gitDescribe>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.spotify</groupId>
-                        <artifactId>dockerfile-maven-plugin</artifactId>
-                        <version>${dockerfile.maven.plugin.version}</version>
-                        <configuration>
-                            <repository>localhost:5000/${project.artifactId}</repository>
-                            <tag>${git.commit.id.describe}</tag>
-                            <buildArgs>
-                                <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-                            </buildArgs>
-                            <verbose>true</verbose>
-                        </configuration>
-                        <dependencies> <!-- required for JDK 9+ -->
-                            <dependency>
-                                <groupId>javax.activation</groupId>
-                                <artifactId>activation</artifactId>
-                                <version>1.1.1</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
@@ -318,6 +220,29 @@
                                 </transformer>
                             </transformers>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
+                <version>5.0.0</version>
+                <configuration>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                    <gitDescribe>
+                        <tags>true</tags>
+                        <abbrev>7</abbrev>
+                        <forceLongFormat>false</forceLongFormat>
+                    </gitDescribe>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <phase>initialize</phase>
                     </execution>
                 </executions>
             </plugin>
