Use typesafe lib to improve config loading
RunLocal is no longer needed. You can now just use 'dev' profile to have defaults for local development

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>okhttp-sse</artifactId>
             <version>4.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.4.2</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
